--- a/blockeditor/blockeditor.css
+++ b/blockeditor/blockeditor.css
@@ -1,3 +1,6 @@
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
-body { display: flex; }
-#editor { flex: 1; }
+body { display: flex; flex-direction: column; }
+#content { display: flex; flex: 1; }
+#editor { flex: 1; position: relative; }
+#preview { flex: 1; display: none; }
+#preview.visible { display: block; }
