--- a/blockeditor/blockeditor.css
+++ b/blockeditor/blockeditor.css
@@ -1,23 +1,8 @@
-html, body {
-  width:100%;
-  height:100%;
-  margin:0;
-  padding:0;
-}body {
-  display:flex;
-  flex-direction:column;
-}#filepath {
-  display:inline;
-}#content {
-  display:flex;
-  flex:1;
-}#editor {
-  flex:1;
-  position:relative;
-}#preview {
-  flex:1;
-  display:none;
-}#preview.visible {
-  display:block;
-}
-/*BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"css_definition","id":"1e*^7l~W)(6}mu+pkg4:","x":88,"y":74,"fields":{"target":"html, body"},"inputs":{"content":{"block":{"type":"css_width","id":"QE`b[wjgGR1+t|TDarjU","fields":{"value":"100%"},"next":{"block":{"type":"css_height","id":"4(a{howP`aeGe{uF-K;2","fields":{"value":"100%"},"next":{"block":{"type":"css_margin","id":"FSFm:A~:x-=tb9PPoHJw","fields":{"value":"0"},"next":{"block":{"type":"css_padding","id":"]:bX,]Hg~sOSU0Ws7TX{","fields":{"value":"0"}}}}}}}}}},"next":{"block":{"type":"css_definition","id":"3XFuEZsuq(lVr@+GL{4N","fields":{"target":"body"},"inputs":{"content":{"block":{"type":"css_display","id":"IzR1T_iGOzFD_xXIZiMq","fields":{"value":"flex"},"next":{"block":{"type":"css_flex-direction","id":"=Cjaoxbeoyb.lJJ;{z+{","fields":{"value":"column"}}}}}},"next":{"block":{"type":"css_definition","id":".g?(fb?0lr%H)BuZ!txH","fields":{"target":"#filepath"},"inputs":{"content":{"block":{"type":"css_display","id":"L%Cy]YnGh8N,4{n%TZTy","fields":{"value":"inline"}}}},"next":{"block":{"type":"css_definition","id":"Ird72LLPcb#Tz~$e,aFL","fields":{"target":"#content"},"inputs":{"content":{"block":{"type":"css_display","id":"?pRci@UIT5B0yAfkrRd;","fields":{"value":"flex"},"next":{"block":{"type":"css_flex","id":"/fI(KJc2i|`=/Xm!bYO9","fields":{"value":"1"}}}}}},"next":{"block":{"type":"css_definition","id":"YxkcbQbyO(zRW]EG_[pv","fields":{"target":"#editor"},"inputs":{"content":{"block":{"type":"css_flex","id":"3@5NFk+,o(6vtO$2wMc}","fields":{"value":"1"},"next":{"block":{"type":"css_position","id":"9MR.t7l%`q;j;kfzY99^","fields":{"value":"relative"}}}}}},"next":{"block":{"type":"css_definition","id":"{9FL@T#_Qdkw{==*#Nw[","fields":{"target":"#preview"},"inputs":{"content":{"block":{"type":"css_flex","id":"~.,D[nPPKxL;(#nR{Fd1","fields":{"value":"1"},"next":{"block":{"type":"css_display","id":"yxGYbIK~;z#5JdTJcrD5","fields":{"value":"none"}}}}}},"next":{"block":{"type":"css_definition","id":"l;yxCV1lU{frBO[oZeo0","fields":{"target":"#preview.visible"},"inputs":{"content":{"block":{"type":"css_display","id":"}!f7El).b/$i4x*~]GUf","fields":{"value":"block"}}}}}}}}}}}}}}}}}]},"toolbox":"css"}*/
+html, body {   width: 100%; height: 100%; margin: 0; padding: 0; }
+body {   display: flex; flex-direction: column; }
+#filepath {   display: inline; }
+#content {   display: flex; flex: 1; }
+#editor {   flex: 1; position: relative; }
+#preview {   flex: 1; display: none; }
+#preview.visible {   display: block; }
+/*BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"selector","id":"vQ;ZGKjMxec0pbupN!7f","x":65,"y":35,"fields":{"arg1":"html, body"},"inputs":{"arg2":{"block":{"type":"width","id":"?,qs}b?1CcGnr]fn:e8W","fields":{"arg1":"100%"},"next":{"block":{"type":"height","id":"x(cO`|y`3UPSN,9[sF,I","fields":{"arg1":"100%"},"next":{"block":{"type":"margin","id":"g=B!=_VkmDsLPRB`Xv:Q","fields":{"arg1":"0"},"next":{"block":{"type":"padding","id":"2r_yv`%C4=-wbfy)?%Z2","fields":{"arg1":"0"}}}}}}}}}}},{"type":"selector","id":"Lr2gopx^6`|!6y@$}nyU","x":275,"y":35,"fields":{"arg1":"body"},"inputs":{"arg2":{"block":{"type":"display","id":"[1uW:cPG!HvF`P8+d|OL","fields":{"arg1":"flex"},"next":{"block":{"type":"flex_direction","id":"_mHv^L+QF_Nlfyc~_H8[","fields":{"arg1":"column"}}}}}}},{"type":"selector","id":"~.|S|!2L^VRpXxkA?+0z","x":515,"y":35,"fields":{"arg1":"#filepath"},"inputs":{"arg2":{"block":{"type":"display","id":"y`2~E-SH3Um1{Y:}g,G}","fields":{"arg1":"inline"}}}}},{"type":"selector","id":"Q6O0LkwedZzg)F%)ed.b","x":705,"y":35,"fields":{"arg1":"#content"},"inputs":{"arg2":{"block":{"type":"display","id":"Q{3C,t3RX]e6DMGa)nbD","fields":{"arg1":"flex"},"next":{"block":{"type":"flex","id":"%BYjz8gt=P9G]N~`lnKj","fields":{"arg1":"1"}}}}}}},{"type":"selector","id":"sBQWi|Znd7av$edJgo1H","x":895,"y":35,"fields":{"arg1":"#editor"},"inputs":{"arg2":{"block":{"type":"flex","id":"zr=CK7%A%e1Wt4D3anB!","fields":{"arg1":"1"},"next":{"block":{"type":"position","id":"5z14L)$|qFjQkurl|zr.","fields":{"arg1":"relative"}}}}}}},{"type":"selector","id":"o,gcL%MN37o;qpd3w-!s","x":65,"y":215,"fields":{"arg1":"#preview"},"inputs":{"arg2":{"block":{"type":"flex","id":"a,PlLLDslF)a]!b`}H1y","fields":{"arg1":"1"},"next":{"block":{"type":"display","id":"bH|v-PVx~sheMMUfg!D7","fields":{"arg1":"none"}}}}}}},{"type":"selector","id":"NnS)+.w$Ls!(rCnkH-W:","x":255,"y":215,"fields":{"arg1":"#preview.visible"},"inputs":{"arg2":{"block":{"type":"display","id":"+}8FxizZAMx51w@6J5pa","fields":{"arg1":"block"}}}}}]},"toolbox":"css_toolbox"}*/
